<resources>
    <string name="app_name">JobSeeker</string>
    <string name="todo">TODO</string>
    <string name="build_your_profile">Build Your Profile</string>
    <string name="import_cv">Import CV</string>
    <string name="i_ll_type_in_my_details">I\'ll Type in my details</string>
    <string name="your_reviews_and_content_submissions_remain_completely_anonymous">Your reviews and content submissions remain completely anonymous</string>
    <string name="import_your_resume_to_pre_fill_profile_details_or_enter_them_as_you_go">Import your resume to pre-fill profile details, Or enter them as you go.</string>
    <string name="back">back</string>
    <string name="jan_2015___feb_2022_5_years">Jan 2015 - Feb 2022 5 Years</string>
    <string name="amazon_inc">Amazon Inc</string>
    <string name="manager">Manager</string>
    <string name="work_experience_ek1">Work experience</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus id commodo egestas metus interdum dolor.</string>
    <string name="about_me_ek1">About me</string>
    <string name="sep_2010___aug_2013_5_years">Sep 2010 - Aug 2013   5 Years</string>
    <string name="university_of_oxford">University of Oxford</string>
    <string name="information_technology">Information Technology</string>
    <string name="education_ek1">Education</string>
    <string name="_14_feb_2022_at_11_30_am">14 Feb 2022 at 11:30 am</string>
    <string name="resume_ek1">Resume</string>
    <string name="leadership">Leadership</string>
    <string name="teamwork">Teamwork</string>
    <string name="target_oriented">Target oriented</string>
    <string name="consistent">Consistent</string>
    <string name="visioner">Visioner</string>
    <string name="__5_more">+5 more</string>
    <string name="see_more">See more</string>
    <string name="skill_ek1">Skill</string>
    <string name="edit_profile">Edit profile</string>
    <string name="job_title">Job title</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="job_search">Job Search</string>
    <string name="company_name">Company Name</string>
    <string name="job_description">Job Description</string>
    <string name="job_location">Job Location</string>
    <string name="job_salary">Job Salary</string>
    <string name="apply">Apply</string>
    <string name="job_category">Job Category</string>
    <string name="job_date">Job Date</string>
    <string name="create_job">Create Job</string>
    <string name="job_post_management_title">Job Postt Management</string>
    <string name="delete">Delete</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_an_account_to_use_our_services">Create an account to use our services</string>
    <string name="full_name">Full name</string>
    <string name="navod">Navod</string>
    <string name="email">Email</string>
    <string name="hansajith18_gmail_com">hansajith18@gmail.com</string>
    <string name="password">Password</string>
    <string name="pw">........</string>
    <string name="pw_icon">TODO</string>
    <string name="remember_me">Remember me</string>
    <string name="remember_me_">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="you_don_t_have_an_account_yet">You don\'t have an account yet?</string>
    <string name="already_have_account">Already have an account yet?</string>
    <string name="sign_in">Sign in</string>
    <string name="google">TODO</string>
    <string name="arrow">TextView</string>
    <string name="upload_cv">Upload CV</string>
    <string name="upload_cv_">TODO</string>
    <string name="add_your_cv_resume_to_apply_for_a_job">Add your CV/Resume to apply for a job</string>
    <string name="rec">TODO</string>
    <string name="upload_cv_resume">Upload CV/Resume</string>
    <string name="upload_files_in_pdf_format_up_to_5_mb_just_upload_it_once_and_you_can_use_it_in_your_next_application">Upload files in PDF format up to 5 MB. Just upload it once and you can use it in your next application.</string>
    <string name="save">SAVE</string>
    <string name="bin">TODO</string>
    <string name="upload_cv__">Upload CV</string>
    <string name="add_your_cv_resume_to_apply_for_a_job_">Add your CV/Resume to apply for a job</string>
    <string name="bin_">TODO</string>
    <string name="navod_cv_se">Navod - CV - SE</string>
    <string name="_867_kb">867 Kb .</string>
    <string name="remove_file">Remove file</string>
    <string name="save_">SAVE</string>
    <string name="_bin_">TODO</string>
    <string name="Bin_">TODO</string>
    <string name="add_education">Add Education</string>
    <string name="institution_name">Institution name</string>
    <string name="level_of_education">Level of education</string>
    <string name="field_of_study">Field of study</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="description">Description</string>
    <string name="save__">SAVE</string>
    <string name="todo_">TODO</string>
    <string name="text">TODO</string>
    <string name="text_">text_</string>
    <string name="back_">TODO</string>
    <string name="add_skill">Add Skill</string>
    <string name="search_skills">Search skills</string>
    <string name="add_skill_">TODO</string>
    <string name="add_">TODO</string>
    <string name="java">TODO</string>
    <string name="php">PHP</string>
    <string name="javascript">Javascript</string>
    <string name="xml">XML</string>
    <string name="java_">TODO</string>
    <string name="xml_">TODO</string>
    <string name="remove_">TODO</string>
    <string name="remove__">TODO</string>
    <string name="php_">TODO</string>
    <string name="_back_">TODO</string>
    <string name="add_work_experience">Add work experience</string>
    <string name="company">Company</string>
    <string name="start_date_">Start date</string>
    <string name="end_date_">End date</string>
    <string name="description_">Description</string>
    <string name="this_is_my_position_now">This is my position now</string>
    <string name="write_additional_information_here">Write additional information here</string>
    <string name="add_w_ex_">add_w_ex_</string>
    <string name="_add_">add_</string>
    <string name="_text_">text_</string>
    <string name="bg">TODO</string>
    <string name="navod_">Navod</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="profile_">Profile</string>
    <string name="pro_">TODO</string>
    <string name="p_">TODO</string>
    <string name="pro__">TODO</string>
    <string name="bar">TODO</string>
    <string name="home">TODO</string>
    <string name="connection">TODO</string>
    <string name="add">TODO</string>
    <string name="msg">TODO</string>
    <string name="_save_">TODO</string>
    <string name="about">TODO</string>
    <string name="work">TODO</string>
    <string name="edu">TODO</string>
    <string name="skill">TODO</string>
    <string name="navod__">Navod</string>
    <string name="change_image">Change image</string>
    <string name="sri_lanka_">Sri Lanka</string>
    <string name="phone_number">Phone number</string>
    <string name="email_">Email</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="fullname">Fullname</string>
    <string name="navod___">navod</string>
    <string name="_16_april_1998">16 April 1998</string>
    <string name="dob">TODO</string>
    <string name="dp">TODO</string>
    <string name="profile">Profile</string>
    <string name="share">TODO</string>
    <string name="shre">TODO</string>
    <string name="location_">location</string>
    <string name="phone_no">_phone_no</string>
    <string name="pn_">pn</string>
    <string name="add_education_1">Add Education</string>
    <string name="des">des</string>
    <string name="scrollView" translatable="false">scrollView</string>
    <string name="add_cv" translatable="false">Add CV</string>
    <string name="header" translatable="false">header</string>
    <string name="john_doe">Navod</string>
    <string name="profile_image">profile_image</string>
    <string name="settings_icon">settings_icon</string>
    <string name="button">Button</string>
    <string name="cv_profile">Cv Profile</string>
    <string name="user">user_image</string>
    <string name="settings">settings_icon</string>
    <string name="_todo_">TODO</string>
    <string name="_to_do_">_TODO</string>
    <string name="amerzon">TODO</string>
    <string name="dribble">Amazon</string>
    <string name="Dribble">Dribble_</string>
    <string name="twitter">twitter</string>
    <string name="fb">fb</string>
    <string name="ms">ms</string>
    <string name="apple">Apple</string>
    <string name="dribbble">Dribbble</string>
    <string name="_twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="microsoft">Microsoft</string>
    <string name="_10_0056_reviews">10,0056 Reviews</string>
    <string name="_34_5690_reviews">34,5690 Reviews</string>
    <string name="_111_2304_reviews">111,2304 Reviews</string>
    <string name="_12_345_reviews">12,345 Reviews</string>
    <string name="_56_432_reviews">56,432 Reviews</string>
    <string name="_10_238785_reviews">10,238785 Reviews</string>
    <string name="_13_0006_reviews">13,0006 Reviews</string>
    <string name="_3_6">3.6</string>
    <string name="str1">str1</string>
    <string name="_5_1">5.1</string>
    <string name="str2">str2</string>
    <string name="_4_3">4.3</string>
    <string name="_7_3">7.3</string>
    <string name="_5_0">5.0</string>
    <string name="_4_8">4.8</string>
    <string name="_6_2">6.2</string>
    <string name="str3">str3</string>
    <string name="str4">str4</string>
    <string name="str5">str5</string>
    <string name="str6">str6</string>
    <string name="str7">str7</string>
    <string name="company_list">Company List</string>
    <string name="overview">Overview</string>
    <string name="companyinfo">companyinfo</string>
    <string name="info">info</string>
    <string name="adobe">adobe</string>
    <string name="_adobe">Adobe</string>
    <string name="_Search">search icon</string>
    <string name="_167_34k">167.34K</string>
    <string name="reviews">Reviews</string>
    <string name="_46k">46K</string>
    <string name="salaries">Salaries</string>
    <string name="jobs">Jobs</string>
    <string name="_164_45k">164.45K</string>
    <string name="add_review">+ Add Review</string>
    <string name="follow">Follow</string>
    <string name="company_info">Company Info</string>
    <string name="salary">Salary</string>
    <string name="otp_verify">OTP Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_job_post">Add job Post</string>
    <string name="manage_job_posts">Manage Job Posts</string>
    <string name="sign_out">Sign Out</string>
    <string name="employee_salary">Employee Salary</string>
    <string name="today_s_date">Today s Date</string>
    <string name="Back_arrow">Back_arrow_</string>
    <string name="Date">Date</string>
    <string name="employee_name">Employee Name</string>
    <string name="name__">Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_status">Employee Status</string>
    <string name="full_time">Full-Time</string>
    <string name="part_time">Part-Time</string>
    <string name="recommended_salary">Recommended Salary</string>
    <string name="cancel_">Cancel</string>
    <string name="button_">Button</string>
    <string name="salary_">Salary</string>
    <string name="id_">ID</string>
</resources>