<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JobPostViewActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="547dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/job_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_title"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/company_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_title_textview"
                android:text="@string/company_name"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/job_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name_textview"
                android:text="@string/job_description" />

        <TextView
                android:id="@+id/job_location_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_description_textview"
                android:text="@string/job_location" />

        <TextView
                android:id="@+id/job_salary_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_location_textview"
                android:text="@string/job_salary" />

        <Button
                android:id="@+id/apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/job_salary_textview"
                android:text="@string/apply" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
